demo1/networking/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: '*.hello-world.info'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-nodeapp
                port:
                  number: 3000
    - host: 'staging.hello-world.info'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-2-nodeapp
                port:
                  number: 3000
